testkit/src/test/input/check/everything/everything.check
Missing: everything.riddl(3:1): Domain 'Everything' should have a description
Missing: everything.riddl(50:5): Type 'optional' should have a description
Style: everything.riddl(27:5): Type 'ident' should start with a capital letter
Missing: everything.riddl(42:7): Field 'key' should have a description
Missing: everything.riddl(44:7): Field 'time' should have a description
Style: everything.riddl(29:5): Type 'tim' should start with a capital letter
Missing: everything.riddl(64:7): State 'someState' should have a description
Missing: everything.riddl(6:3): Type 'DoAThing' should have a description
Missing: everything.riddl(30:5): Type 'stamp' should have a description
Missing: everything.riddl(20:3): Context 'full' should have a description
Missing: everything.riddl(59:5): Entity 'Something' should have a description
Missing: everything.riddl(43:7): Field 'id' should have a description
Style: everything.riddl(28:5): Type 'dat' should start with a capital letter
Style: everything.riddl(34:25): Field identifier 'a' is too short. The minimum length is 3
Missing: everything.riddl(62:7): Type 'somethingDate' should have a description
Missing: everything.riddl(34:5): Type 'PeachType' should have a description
Style: everything.riddl(26:5): Type 'boo' should start with a capital letter
Style: everything.riddl(48:5): Type 'oneOrMore' should start with a capital letter
Missing: everything.riddl(24:5): Type 'str' should have a description
Style: everything.riddl(30:5): Type 'stamp' should start with a capital letter
Missing: everything.riddl(25:5): Type 'num' should have a description
Style: everything.riddl(38:5): Type 'alt' should start with a capital letter
Missing: everything.riddl(34:25): Field 'a' should have a description
Missing: everything.riddl(26:5): Type 'boo' should have a description
Missing: everything.riddl(31:5): Type 'url' should have a description
Missing: everything.riddl(82:5): Entity 'SomeOtherThing' should have a description
Missing: everything.riddl(38:5): Type 'alt' should have a description
Style: everything.riddl(24:5): Type 'str' should start with a capital letter
Missing: everything.riddl(66:7): Function 'whenUnderTheInfluence' should have a description
Style: everything.riddl(35:5): Type 'enum' should start with a capital letter
Style: everything.riddl(62:7): Type 'somethingDate' should start with a capital letter
Missing: everything.riddl(28:5): Type 'dat' should have a description
Style: everything.riddl(25:5): Type 'num' should start with a capital letter
Missing: everything.riddl(41:5): Type 'agg' should have a description
Style: everything.riddl(31:5): Type 'url' should start with a capital letter
Missing: everything.riddl(5:3): Type 'SomeType' should have a description
Missing: everything.riddl(64:28): Field 'someField' should have a description
Missing: everything.riddl(48:5): Type 'oneOrMore' should have a description
Missing: everything.riddl(49:5): Type 'zeroOrMore' should have a description
Style: everything.riddl(50:5): Type 'optional' should start with a capital letter
Style: everything.riddl(41:5): Type 'agg' should start with a capital letter
Missing: everything.riddl(6:30): Field 'thingField' should have a description
Style: everything.riddl(43:7): Field identifier 'id' is too short. The minimum length is 3
Missing: everything.riddl(35:5): Type 'enum' should have a description
Missing: everything.riddl(27:5): Type 'ident' should have a description
Missing: everything.riddl(29:5): Type 'tim' should have a description
Style: everything.riddl(49:5): Type 'zeroOrMore' should start with a capital letter
Missing: everything.riddl(84:7): State 'otherThingState' should have a description
Missing: everything.riddl(83:7): Type 'ItHappened' should have a description
Missing: everything.riddl(35:48): Enumerator 'Persimmon' should have a description
Missing: everything.riddl(35:33): Enumerator 'Pear' should have a description
Missing: everything.riddl(12:24): Outlet 'Commands' should have a description
Missing: everything.riddl(15:5): Joint 'input' should have a description
Missing: everything.riddl(16:5): Joint 'output' should have a description
Missing: everything.riddl(35:27): Enumerator 'Apple' should have a description
Missing: everything.riddl(35:38): Enumerator 'Peach' should have a description
Missing: everything.riddl(13:20): Inlet 'Commands' should have a description
Error: everything.riddl(72:20): Reference[Type] 'Something'(72:12) was expected to be a command type but is an Entity instead
Style: everything.riddl(13:20): Inlet 'Commands' overloads Outlet 'Commands' at everything.riddl(12:24)
Error: everything.riddl(76:29): 'Inebriated' is not defined but should be a message type
Error: everything.riddl(75:18): 'misc' is not defined but should be a Function
Missing: everything.riddl(83:34): Field 'when' should have a description
Missing: everything.riddl(84:34): Field 'then' should have a description
Missing: everything.riddl(73:11): Example 'only' should have a description
Missing: everything.riddl(87:11): Example 'only' should have a description
Style: everything.riddl(87:11): Example 'only' overloads Example 'only' at everything.riddl(73:11)
Style: everything.riddl(67:20): Field identifier 'n' is too short. The minimum length is 3
Style: everything.riddl(68:18): Field identifier 'b' is too short. The minimum length is 3
Missing: everything.riddl(68:18): Field 'b' should have a description
Missing: everything.riddl(67:20): Field 'n' should have a description
Missing: everything.riddl(11:3): Plant 'APlant' should have a description
Missing: everything.riddl(71:15): Handler 'foo' should have a description
Missing: everything.riddl(86:12): On Clause 'On event ItHappened' should have a description
Missing: everything.riddl(85:15): Handler 'fee' should have a description
Missing: everything.riddl(72:12): On Clause 'On command Something' should have a description
